[package]
name = "scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
scraper = "0.18.1"
tokio = {version = "1.34.0", features = ["full"] }
regex = "1.10.2"

[dependencies.openssl]
version = "0.10.29"
features = ["vendored"]
